<resources>
    <string name="app_name">NewsList</string>
    <string name="menu_item_reload">Reload</string>
    <string name="menu_item_settings">Settings</string>
    <string name="pref_display_images_on">Images will be displayed.</string>
    <string name="pref_display_images_off">Images won\'t be displayed.</string>
    <string name="pref_download_images_on">Images will be downloaded in the background.</string>
    <string name="pref_download_images_off">Images won\'t be downloaded in the background.</string>
    <string name="settings_display_images_title">Display Images</string>
    <string name="settings_download_images_title">Download Images in the Background</string>
    <string name="settings_display_images_key" translatable="false">settings_display_images</string>
    <string name="settings_download_images_key" translatable="false">settings_download_images</string>
    <string name="settings_url_key" translatable="false">settings_url</string>
    <string name="settings_url_title">News Feed URL</string>
    <string name="settings_url_default" translatable="false">https://www.engadget.com/rss.xml</string>
    <string name="button_full_story">Full Story</string>
    <string name="detail_extra_error">Opening the News Item failed!</string>
    <string name="detail_screen_name">Details</string>
    <string name="settings_screen_name">Settings</string>
    <string name="general_error">An error occurred while loading the news.</string>
    <string name="insert_error">An error occurred while caching the news.</string>
</resources>